
0.9.10d Sep 28, 2005
 * changed slapt_init_regex() to return slapt_regex_t *
 * changed slapt_init_transaction() to return slapt_transaction_t *
 * added libslapt.3 manpage
 * added reference to Stefano Stabellini's PACKAGES.TXT with dependency
   information to FAQ #10.
 * introduced --install-set option to install whole disk sets
 * fixed naming of data cache file for uncompressed PACKAGES.TXT
 * updated the package data download to save on disk i/o
 * created a doc/ directory for the man pages
 * added Russian and Unkrainian translations (and man pages) by sin of the DeepStyle team
 * updated files for 10.2
 * updated Vietnamese translation from Vu
 * updated Portuguese_Portugal translation from Miguel

0.9.10c Aug 31, 2005
 * French translation update by solsTiCe d'Hiver
 * added --no-upgrade so that packages (such as the kernel) can be installed
   side by side with an existing version.  This disables the check for --install
   arguments that automatically selects the package for upgrade.
 * added slapt_remove_source to compliment slapt_add_source 
 * updated withlibslapt make target, and the library naming convention 
   from libslapt-$(VERSION).so to libslapt.so.$(VERSION)
 * updated pt_PT translation from Miguel
 * updated prompting to better handling input for autoclean and transaction
   accepting.

0.9.10b Aug 09, 2005
 * updated download output 
 * updated output of --list, --available, --installed, and --search joining
   the package name and version (as suggested by chino)
 * added a slapt_cmp_pkgs macro to call slapt_cmp_versions
 * added --retry [num] option to retry failed downloads
   (thanks to Adam Kennedy and John Poplett)
 * translation updates
 * fixed bug trying to head file:// sources
 * merged patch from Ondrej Zary to speedup merging package data with md5sums
 * added slack-suggests containing gslapt

0.9.10a Jul 25, 2005
 * libslapt updates, moving console notification for [install|upgrade]pkg into